--- a/tests/web/repl.html
+++ b/tests/web/repl.html
@@ -45,8 +45,8 @@
 hello.world;
 how('are').you().doing ? oh: right;
             </textarea>
-            <textarea id="ta_ast"></textarea>
-            <textarea id="ta_output"></textarea>
+            <textarea id="ta_ast" placeholder="AST"></textarea>
+            <textarea id="ta_output" placeholder="tokens"></textarea>
 
             <script src="./repl.js" type="module"></script>
         </div>
