--- a/tests/web/repl.html
+++ b/tests/web/repl.html
@@ -1,54 +1,77 @@
 <!doctype html>
 <html>
-    <head>
-        <title>ZeParser3 REPL</title>
-        <meta charset="UTF-8">
-        <style>
-            html {
-                display: block;
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-            body {
-                display: flex;
-                flex-direction: column;
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-            #top {
-                margin: 5px;
-            }
-            #body {
-                display: flex;
-                flex-direction: row;
-                width: 100%;
-                height: 100%;
-                margin: 0;
-                padding: 0;
-            }
-            textarea {
-                display: flex;
-                flex-grow: 1;
-            }
-        </style>
-    </head>
-    <body>
-        <div id="top">ZeParser3 REPL &mdash; &copy; October 2018 &mdash; <a href="https://pvdz.ee">Peter van der Zee</a> &mdash; <a href="https://github.com/pvdz/zeparser3">Github</a></div>
-        <div id="body">
-            <textarea id="ta_input">
+<head>
+  <title>ZeParser3 REPL</title>
+  <meta charset="UTF-8">
+  <style>
+    html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+
+    body {
+      min-height: 100%;
+      display: flex;
+      flex-direction: column;
+      margin: 0;
+      padding: 0;
+    }
+
+    div { display: flex; }
+
+    .top { margin: 5px; }
+
+    .box { align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto; }
+    .header, .box.header { background-color: #eee; border: 1px solid black; box-sizing: border-box; padding: 5px; height: 30px; }
+  </style>
+</head>
+<body>
+<div class="top">
+  ZeParser3 REPL &mdash;
+  October 2018 &mdash;
+  &copy;&nbsp;<a href="https://pvdz.ee">Peter van der Zee</a>&nbsp;&mdash;&nbsp;
+  <a href="https://github.com/pvdz/zeparser3">Github</a>
+</div>
+<div style="flex-grow: 1">
+  <div class="box main" style="align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+    <div class="box left" style="flex-direction: column; align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+      <div class="box top-left" style="flex-direction: column; align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+        <div class="header">Input</div>
+        <textarea id="ta_input" placeholder="enter code here" class="box tl" style="align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
 // Note: Firefox (&lt;=63) crashes as long as it does not support `import()`.
 // Same for any browser not supporting es modules (`import`/`export`).
 hello.world;
 how('are').you().doing ? oh: right;
-            </textarea>
-            <textarea id="ta_ast" placeholder="AST"></textarea>
-            <textarea id="ta_output" placeholder="tokens"></textarea>
-
-            <script src="./repl.js" type="module"></script>
-        </div>
-    </body>
+        </textarea>
+      </div>
+      <div class="box bottom-left" style="flex-direction: column; align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+        <div class="header">Console</div>
+        <textarea id="stderr" placeholder="unused" class="box bl" style="align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+        </textarea>
+      </div>
+    </div>
+    <div class="box right" style="flex-direction: column; align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+      <div class="box top-right" style="flex-direction: column; align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+        <div class="header">AST</div>
+        <textarea id="ta_ast" placeholder="AST" class="box tr" style="align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+        </textarea>
+      </div>
+      <div class="box top-right" style="flex-direction: column; align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+        <div class="header">Tokens</div>
+        <textarea id="ta_output" placeholder="tokens" class="box br" style="align-self: stretch; order: initial; flex-grow: 1; flex-shrink: 1; flex-basis: auto;">
+        </textarea>
+      </div>
+    </div>
+  </div>
+</div>
+</body>
 </html>
+
+
+<script>
+  var global = window;
+  var exports = {};
+</script>
+<script src="./prettier.mjs"></script>
+<script src="./repl.js" type="module"></script>
