Update readme a bit, add es10/es11 to repl ui

--- a/tests/web/repl.html
+++ b/tests/web/repl.html
@@ -110,8 +110,18 @@
           </span>
 
           <span class="mode_selector" title="Click here to show the output parsed in es9">
-            <input type="radio" name="version" id="$ver_es9" value="9" checked/>
+            <input type="radio" name="version" id="$ver_es9" value="9"/>
             <label for="$ver_es9">ES9</label>
+          </span>
+
+          <span class="mode_selector" title="Click here to show the output parsed in es10">
+            <input type="radio" name="version" id="$ver_es10" value="10"/>
+            <label for="$ver_es10">ES10</label>
+          </span>
+
+          <span class="mode_selector" title="Click here to show the output parsed in es11">
+            <input type="radio" name="version" id="$ver_es11" value="11" checked/>
+            <label for="$ver_es11">ES11</label>
           </span>
 
           &nbsp;&mdash; AST &mdash;&nbsp;
